--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,29 @@
 .main {
     box-sizing: border-box;
     display: flex;
-    border: solid thick red;
+
     height: 100vh;
     justify-content: space-between;
     > div {
-        border: solid thin blue;
+        // border: solid thin blue;
     }
 
     .sidebar {
         width: 250px;
+        text-align: center;
+        padding-top: 50px;
+        >div{
+
+            height: 50px;line-height: 50px;
+            font-size: 24px;
+            a{
+                text-decoration: none;
+            }
+            a:visited{
+                text-decoration: none;
+                color: white;
+            }
+        }
     }
 
     .mainarea {
