--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@
             }
             a:visited{
                 text-decoration: none;
-                color: white;
+                color: black;
             }
         }
     }
